# jetacker-ackermann-nav2

./: README.md
docs/: video1.webm
jetacker_ackermann_control/: package.xml  setup.cfg  setup.py
jetacker_ackermann_control/jetacker_ackermann_control/: ackermann_controller.py  navigate_to_place.py  navigate_to_pose_cli.py
jetacker_ackermann_description/: package.xml  setup.cfg  setup.py
jetacker_ackermann_description/launch/: display.launch.py  robot_description.launch.py  rviz.launch.py
jetacker_ackermann_description/urdf/: jetacker.xacro  jetacker_ackermann.urdf.xacro  jetacker_ackermann_draft.urdf.xacro
jetacker_ackermann_gazebo/: package.xml  setup.cfg  setup.py
jetacker_ackermann_gazebo/config/: controllers.yaml  nav2_ackermann.yaml
jetacker_ackermann_gazebo/launch/: ackermann_navigation.launch.py  ackermann_sim.launch.py
jetacker_ackermann_gazebo/urdf/: ackermann_ros2_control.xacro  jetacker_ackermann.gazebo.xacro
robot_gazebo/launch/: navigation.launch.py  ros_ign_bridge.launch.py  spawn_objects.launch.py  worlds.launch.py
