<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>jetacker_ackermann_gazebo</name>
  <version>0.0.0</version>

  <description>JetAcker Ackermann Gazebo Simulation</description>

  <maintainer email="aim@todo.todo">aim</maintainer>

  <license>Apache-2.0</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS -->
  <depend>ament_index_python</depend>
  <depend>xacro</depend>

  <depend>robot_state_publisher</depend>

  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>position_controllers</depend>
  <depend>velocity_controllers</depend>

  <depend>ros_gz_sim</depend>
  <depend>gz_ros2_control</depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>rviz2</depend>

  <!-- Description package -->
  <exec_depend>jetacker_ackermann_description</exec_depend>
  <exec_depend>robot_gazebo</exec_depend>
  <exec_depend>robot_gazebo</exec_depend>

  <!-- Test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
